apps/production/ombi/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ombi
spec:
  serviceName: "ombi"
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: registry-proxy.local.hejsan.xyz/linuxserver/ombi:4.44.1
        ports:
        - containerPort: 3579
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
  volumeClaimTemplates:
  - metadata:
      name: ombi-config-pvc
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: nfs-storage
      resources:
        requests:
          storage: 100Gi
