apps/production/ombi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
spec:
  selector:
    app: ombi
  ports:
    - name: http
      targetPort: 3579
      port: 3579
