apps/production/ombi/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ombi
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ombi.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: ombi
          port: http
      middlewares:
        - name: default-headers
  tls:
    secretName: local-hejsan-xyz-tls
